@@ -10262,7 +10262,11 @@ init|=
 operator|new
 name|HashMap
 argument_list|<>
-argument_list|()
+argument_list|(
+literal|14
+argument_list|,
+literal|1
+argument_list|)
 decl_stmt|;
 name|m
 operator|.
@@ -10746,7 +10750,14 @@ init|=
 operator|new
 name|LinkedHashMap
 argument_list|<>
+argument_list|(
+name|map
+operator|.
+name|size
 argument_list|()
+argument_list|,
+literal|1
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -10828,7 +10839,7 @@ name|ErrorCode
 operator|.
 name|SERVER_ERROR
 argument_list|,
-literal|"Unbale to instantiate class"
+literal|"Unable to instantiate class"
 argument_list|,
 name|exp
 argument_list|)
@@ -11068,7 +11079,12 @@ init|=
 operator|new
 name|ArrayList
 argument_list|<>
+argument_list|(
+name|pluginInfos
+operator|.
+name|size
 argument_list|()
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -11666,7 +11682,9 @@ init|=
 operator|new
 name|SimpleOrderedMap
 argument_list|<>
-argument_list|()
+argument_list|(
+literal|8
+argument_list|)
 decl_stmt|;
 name|lst
 operator|.
